--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Streaming Hub</title>
+  <title>Brave Streaming Hub</title>
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <!-- Topbar -->
   <header class="topbar">
     <div class="container topbar__inner">
-      <h1 class="app-title">Streaming Hub</h1>
+      <h1 class="app-title">Brave Streaming Hub</h1>
       <button id="clear-continue" class="ghost-btn" aria-label="Clear Continue Watching">
         Clear Continue
       </button>
