--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Brave Streaming Hub</title>
   <link rel="stylesheet" href="styles.css"/>
+  <link rel="icon" href="icons/brave_streaming.png" type="image/png" />
 </head>
 <body>
   <!-- Topbar -->
   <header class="topbar">
     <div class="container topbar__inner">
-      <h1 class="app-title">Brave Streaming Hub</h1>
+      <!-- Top header -->
+      <header class="app-header">
+        <img src="icons/brave_streaming.png" alt="Brave Streaming Hub" class="site-logo" />
+        <h1 class="app-title">Brave Streaming Hub</h1>
+      </header>
       <button id="clear-continue" class="ghost-btn" aria-label="Clear Continue Watching">
         Clear Continue
       </button>
