feat(header): add account and settings buttons to header
Add interactive account and settings buttons with SVG icons to the header. Include styling for the new buttons and placeholder click handlers in app.js. The buttons are positioned next to the title with appropriate hover effects and visual styling.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,24 @@
       <header class="app-header">
         <img src="icons/brave_streaming.png" alt="Brave Streaming Hub" class="site-logo" />
         <h1 class="app-title">Brave Streaming Hub</h1>
+        <div class="header-actions">
+          <button id="btn-account" class="icon-btn ghost-btn" type="button" aria-label="Account">
+            <!-- User-circle icon -->
+            <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="9"></circle>
+              <circle cx="12" cy="9" r="3.25"></circle>
+              <path d="M7 17a7 7 0 0 1 10 0"></path>
+            </svg>
+          </button>
+          <button id="btn-settings" class="icon-btn ghost-btn" type="button" aria-label="Settings">
+            <!-- Clean balanced gear -->
+            <svg viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="12" r="3.25"></circle>
+              <path d="M19.4 15a7.6 7.6 0 0 0 .1-2l1.9-1.1-1.2-2.2-2.1.6a7.7 7.7 0 0 0-1.7-1l-.3-2.2h-2.5l-.3 2.2c-.6.2-1.2.5-1.7 1l-2.1-.6-1.2 2.2 1.9 1.1a7.6 7.6 0 0 0 .1 2l-1.9 1.1 1.2 2.2 2.1-.6c.5.4 1.1.8 1.7 1l.3 2.2h2.5l.3-2.2c.6-.2 1.2-.5 1.7-1l2.1.6 1.2-2.2-1.9-1.1z"></path>
+            </svg>
+          </button>
+        </div>
       </header>
-      <!-- New: Play YouTube URL -->
     </div>
   </header>
 
