feat(profiles): add multi-profile support for Brave history
- Implement profile detection and selection UI
- Add modal for profile switching
- Modify history API to support profile parameter
- Store selected profile in localStorage

--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     </div>
   </div>
 
+  <!-- Account modal -->
+  <div id="account-modal" class="modal" hidden>
+    <div class="modal__backdrop"></div>
+    <div class="modal__content">
+      <div class="modal__header">
+        <span class="modal__title">Choose Profile</span>
+        <button id="account-close" class="ghost-btn">Close</button>
+      </div>
+      <div id="profiles-list" class="profile-list"></div>
+    </div>
+  </div>
   <script src="app.js" type="module"></script>
 </body>
 </html>
