feat(profiles): add support for opening links in selected Brave profile
Implement profile-aware link handling in the streaming hub. When a profile is active, links will open in the selected Brave profile via a new `/open` endpoint. Includes fallback mechanisms and AppleScript-based window/tab focusing.

Add new icons and rename branding from "Brave Streaming Hub" to "Web Streaming Hub".

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Brave Streaming Hub</title>
+  <title>Web Streaming Hub</title>
   <link rel="stylesheet" href="styles.css"/>
-  <link rel="icon" href="icons/brave_streaming.png" type="image/png" />
+  <link rel="icon" href="icons/web_streaming.png" type="image/png" />
 </head>
 <body>
   <!-- Topbar -->
   <header class="topbar">
     <div class="container topbar__inner">
       <header class="app-header">
-        <img src="icons/brave_streaming.png" alt="Brave Streaming Hub" class="site-logo" />
-        <h1 class="app-title">Brave Streaming Hub</h1>
+        <img src="icons/web_streaming.png" alt="Web Streaming Hub" class="site-logo" />
+        <h1 class="app-title">Web Streaming Hub</h1>
         <div class="header-actions">
           <button id="btn-account" class="icon-btn ghost-btn" type="button" aria-label="Account">
             <!-- User-circle icon -->
